tests/ui/generator/yield-while-ref-reborrowed.stderr
error[E0501]: cannot borrow `x` as immutable because previous closure requires unique access
  --> $DIR/yield-while-ref-reborrowed.rs:36:20
   |
LL |     let mut b = || {
   |                 -- generator construction occurs here
LL |         let a = &mut *x;
   |                      -- first borrow occurs due to use of `x` in generator
...
LL |     println!("{}", x);
   |     ---------------^-
   |     |              |
   |     |              second borrow occurs here
   |     in this macro invocation (#1)
LL |     Pin::new(&mut b).resume(());
   |              ------ first borrow later used here
  --> $SRC_DIR/std/src/macros.rs:LL:COL
   |
   = note: in this expansion of `println!` (#1)
  ::: $SRC_DIR/std/src/macros.rs:LL:COL
   |
   = note: in this macro invocation (#2)
  --> $SRC_DIR/core/src/macros/mod.rs:LL:COL
   |
   = note: in this expansion of `$crate::format_args_nl!` (#2)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0501`.
